website/app/styles/pages/application/sidebar.scss
/**
 * Copyright (c) HashiCorp, Inc.
 * SPDX-License-Identifier: MPL-2.0
 */

// SIDE NAVIGATION

@use "../../breakpoints" as breakpoint;

$doc-page-sidebar-transition-duration: 0.25s;

// ⚠️ ---  the sidebar "navigation" is different between the homepage and the other pages --- ⚠️

// HOME PAGE
// This is a special case: the sidebar is horizontal and is visible *only* on small viewports (when opened)

body.application.index {
  .doc-page-sidebar {
    // Notice: for `display` and animation/transition look below
    position: fixed;
    top: var(--doc-page-header-height);
    right: 0;
    left: 0;
    z-index: var(--doc-z-index-sidebar);
    background: linear-gradient(92.03deg, #4f53d0 -0.05%, #7545cb 100.68%);
    transform: translate3d(0, 0, 0);
  }

  // for the homepage we have a special treatment so we override the styles of the TOC
  .doc-page-sidebar__top-routes {
    .doc-table-of-contents {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: space-evenly;
      padding: 16px;
    }

    .doc-table-of-contents__item {
      margin: 0;
    }

    .doc-table-of-contents__heading {
      display: none;
    }

    .doc-table-of-contents__link {
      color: var(--doc-color-white);

      &:hover,
      &:active {
        color: var(--doc-color-white);
      }
    }
  }
}

// ALL THE OTHER PAGES

body.application:not(.index) {
  // if dialog is open, set sidebar z-index to 1
  &.doc-page-wrapper:has(dialog[open]),
  &.doc-page-wrapper:has(.hds-code-editor--is-full-screen) {
    --doc-z-index-sidebar: 1;

    .doc-scroll-to-top {z-index: 1;}
  }

  // if code editor is in full screen mode, set page header & scroll to top z-index to 1
  &.doc-page-wrapper:has(.hds-code-editor--is-full-screen) {
    .doc-page-header, .doc-scroll-to-top {z-index: 1;}
  }

  // Notice: for `display` and animation/transition look below
  .doc-page-sidebar {
    position: fixed;
    top: var(--doc-page-header-height);
    left: 0;
    z-index: var(--doc-z-index-sidebar);
    display: flex;
    flex-direction: column;
    width: var(--doc-page-sidebar-width);
    height: calc(100vh - var(--doc-page-header-height));
    background: var(--doc-color-white);
    box-shadow: 0 8px 16px rgba(37, 38, 45, 20%);
  }

  .doc-page-sidebar__inner-wrapper {
    position: relative;
    flex: 1 0 0;
    min-height: 0;
    padding: 32px 24px;
    overflow-y: auto;
    overscroll-behavior: contain;
    -webkit-overflow-scrolling: touch;
  }

  .doc-page-sidebar__top-routes {
    &::after {
      display: block;
      height: 3px;
      margin: 20px 0;
      // background-color: var(--doc-color-gray-500);
      background: linear-gradient(92.03deg, #4f53d0 -0.05%, #7545cb 100.68%);
      content: "";
    }

    @include breakpoint.medium () {
      display: none;
    }
  }

  .doc-page-sidebar__filter {
    margin-bottom: 16px;
  }
}

// ------------------------------------------

// ANIMATION (for small viewports)

// HOME PAGE

body.application.index {
  // by default we remove the sidebar from the render tree, so its children can't receive focus
  .doc-page-sidebar {
    display: none;
    transition: none;
  }

  // when the `isSidebarInRenderTree` class is added to the `<body>` (via JS) we add the sidebar to the render tree (so we can then animate it)
  &.isSidebarInRenderTree .doc-page-sidebar {
    display: block;
    transform: translate3d(0, -100%, 0);
    transition: transform $doc-page-sidebar-transition-duration ease-in;
  }

  &.isSidebarVisibleOnSmallViewport .doc-page-sidebar {
    transform: translate3d(0, 0, 0);
    transition: transform $doc-page-sidebar-transition-duration ease-out;
  }
}

// ALL THE OTHER PAGES

body.application:not(.index) {
  // the sidebar is animated only on small viewports
  @include breakpoint.with-mobile-sidebar() {
    // by default we remove the sidebar from the render tree, so its children can't receive focus
    .doc-page-sidebar {
      display: none;
      transition: none;
    }

    // when the `isSidebarInRenderTree` class is added to the `<body>` (via JS) we add the sidebar to the render tree (so we can then animate it)
    &.isSidebarInRenderTree .doc-page-sidebar {
      display: flex;
      transform: translate3d(-100%, 0, 0);
      transition: transform $doc-page-sidebar-transition-duration ease-in;
    }

    &.isSidebarVisibleOnSmallViewport .doc-page-sidebar {
      transform: translate3d(0, 0, 0);
      transition: transform $doc-page-sidebar-transition-duration ease-out;
    }

    // we also lock the overflow scrolling on the `<body>` element
    &.isSidebarVisibleOnSmallViewport {
      overflow: hidden;
    }
  }
}

// ERROR PAGE
// also if you want to change this, change footer.scss too

body.application.error {
  @include breakpoint.with-fixed-sidebar() {
    .doc-page-sidebar {
      display: none;
    }
  }
}

